# ida-taskr

./: .coveragerc  .cursorrules  .dockerignore  .gitignore  README.md  docker-compose.yml  entry_stub.py  ida-plugin.json  pyproject.toml  run_tests.sh
.cursor/rules/: ida-integration.mdc  testing-conventions.mdc
.githooks/: pre-commit
.github/workflows/: python.yml  release.yml
docs/: QTASYNCIO.md
examples/: README.md  README_MINIMAL_API.md  README_SHARED_MEMORY.md  api_simplicity_levels.py  decorator_evolution.py  decorator_simple_example.py  event_emitter_usage.py  ida_shared_memory_pattern.py  interpreter_pool_example.py  minimal_decorator_api.py  one_line_solution.py  qtasyncio_event_loop.py  shared_memory_comparison.py  shared_memory_decorator_example.py  shared_memory_executor_comparison.py  shared_memory_executor_ida.py  shared_memory_executor_signals.py  shared_memory_executor_simple.py  shared_memory_minimal.py  shared_memory_one_line.py  shared_memory_parallel_example.py  signature_generation_example.py  simple_cpu_intensive_example.py  simple_progress_example.py  thread_worker_usage.py  ultra_minimal.py
scripts/: amalgamate.py  generate_test_binary.sh
src/: ida_taskr.py
src/ida_taskr/: __init__.py  decorators.py  helpers.py  ida_taskr_amalgamated.py  launcher.py  protocols.py  qt_compat.py  qtasyncio.py  task_runner.py  taskr_plugin.py  utils.py  worker.py
tests/: IDA_TESTING.md  __init__.py  check_worker_launcher.py  conftest.py  minimal_test.py  run_ida_tests.py  run_launcher_test.py  run_manual_tests_in_ida.py  run_single_test_in_ida.py  run_test_no_pytest.py  run_test_via_plugin.py  run_tests_in_ida.py  simple_ida_check.py  test_anti_deob.py  test_event_emitter.py  test_hcli_packaging.py  test_imports.py  test_plugin_manifest.py  test_qprocess_headless.py  test_task_runner.py  test_worker_commands.py
tests/_resources/: README.md
tests/anti_deob/: deobfuscator.py  worker_main.py
tests/integration/: 11.1.0.60228.json  README.md  __init__.py  conftest.py  test_anti_deob.py  test_integration_ida_analysis.py  test_integration_qt_core.py  test_integration_taskrunner.py
tests/integration/anti_deob/: deobfuscator.py  worker_main.py
tests/unit/: __init__.py  test_event_emitter.py  test_imports.py  test_interpreter_pool_executor.py  test_process_pool_executor.py  test_qtasyncio.py  test_shared_memory_executor.py  test_task_runner.py  test_thread_executor.py  test_worker_commands.py
tools/: build_hcli_archive.py  sync_plugin_version.py
