[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-taskr"
version = "0.1.0"
description = "IDA task runner"

[project.optional-dependencies]
ci = [
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.0.0",
]
pyqt5 = ["PyQt5>=5.15.0"]
pyside6 = ["PySide6>=6.0.0"]

# Core test dependencies
tests = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ida-taskr = "ida_taskr:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 300
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/ida_taskr"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false