[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-taskr"
version = "1.0.1"
description = "A Qt-based multiprocessing framework for IDA Pro parallel computing with simple decorator API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mahmoud Abdelkader", email = "mahmoud@linux.com"}
]
keywords = [
    "ida",
    "ida-pro",
    "reverse-engineering",
    "multiprocessing",
    "parallel",
    "threading",
    "background-tasks",
    "qt",
    "pyside6",
    "pyqt5",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

[project.urls]
Homepage = "https://github.com/mahmoudimus/ida-taskr"
Repository = "https://github.com/mahmoudimus/ida-taskr"
Issues = "https://github.com/mahmoudimus/ida-taskr/issues"

[project.optional-dependencies]
ci = [
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.0.0",
]
pyqt5 = ["PyQt5>=5.15.0"]
pyside6 = ["PySide6>=6.0.0"]

# Core test dependencies
tests = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ida-taskr = "ida_taskr:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 300
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/ida_taskr"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false